fix: treeValue should be a resource with by-reference fragmentation (#1239)